Started added logic to derive type from profile.  Split analyser into ProfileFactory and TypeInferrer to separate construction of profile from analysis of it.  Still lots of work to do on derivation logic.  Also, seem to have lost hashtag logic which I could have sworn was in there somewhere originally.

--- a/rakefile
+++ b/rakefile
@@ -7,3 +7,9 @@ Spec::Rake::SpecTask.new('rcov') do |t|
   t.rcov = true
   t.rcov_opts = ['--include', 'src/**/*.rb', '--exclude', '/Library/Ruby/Gems/*,/Users/amarks/,gem/*']
 end
+
+desc "Run all examples with RSpec"
+Spec::Rake::SpecTask.new('spec') do |t|
+  t.spec_files = FileList['test/**/*.rb']
+  t.rcov = false
+end
