--- a/rakefile
+++ b/rakefile
@@ -1,6 +1,8 @@
 require 'rake'
 require 'spec/rake/spectask'
 
+task :default => [:spec]
+
 desc "Run all examples with RCov"
 Spec::Rake::SpecTask.new('rcov') do |t|
   t.spec_files = FileList['test/**/*.rb']
