Turned rake tracing on to see rest of stacktrace from error causing runcoderun build to fail.

--- a/rakefile
+++ b/rakefile
@@ -1,6 +1,8 @@
 require 'rake'
 require 'spec/rake/spectask'
 
+Rake.application.options.trace = true
+
 task :default => [:spec]
 
 desc "Run all examples with RCov"
