--- a/rakefile
+++ b/rakefile
@@ -1,7 +1,7 @@
 require 'rake'
 require 'spec/rake/spectask'
 
-Rake.application.options.trace = true
+#Rake.application.options.trace = true
 
 task :default => [:spec]
 
