Finally removed repository and pulled type inference back into profile because of feature envy

--- a/rakefile
+++ b/rakefile
@@ -32,7 +32,7 @@ MetricFu::Configuration.run do |config|
                                  "--profile",
                                  "--rails",
                                  "--exclude /gems/,/Library/,spec"]}
-  config.graph_engine = :gchart
+  config.graph_engine = :bluff
 end
 
 task :default => [:spec]
