--- a/rakefile
+++ b/rakefile
@@ -2,6 +2,10 @@ require 'rake'
 require 'rake/clean'
 require 'spec/rake/spectask'
 require 'metric_fu'
+require 'rubygems'
+#Gem::manage_gems
+require 'rake/gempackagetask'
+
 
 #Rake.application.options.trace = true
 
@@ -59,4 +63,25 @@ Spec::Rake::SpecTask.new do |t|
   t.spec_files = spec_file_list
   t.rcov = false
   t.spec_opts = ['--format', 'nested']
+end
+
+SPEC = Gem::Specification.new do |s|
+  s.name = "twittertype"
+  s.version = "1.0.0"
+  s.author = "Andy Marks"
+  s.email = "andy@corvine.org"
+  s.homepage = "http://www.corvine.org/twittertype"
+  s.platform = Gem::Platform::RUBY
+  s.summary = "A utility for analysing Twitter user tweet patterns"
+  s.files = FileList["{bin,lib}/**/*"].to_a
+  s.require_path = "lib"
+  s.test_files = FileList["{test}/**/*_spec.rb"].to_a
+  s.has_rdoc = true
+  s.extra_rdoc_files = ["README"]
+  s.add_dependency("Twitter", ">= 0.8.0")
+end
+
+desc "Package me as a RubyGem"
+Rake::GemPackageTask.new(SPEC) do |pkg|
+  pkg.need_tar = true
 end
