--- a/rakefile
+++ b/rakefile
@@ -67,7 +67,7 @@ end
 
 SPEC = Gem::Specification.new do |s|
   s.name = "twittertype"
-  s.version = "1.0.0"
+  s.version = "0.1.0"
   s.author = "Andy Marks"
   s.email = "andy@corvine.org"
   s.homepage = "http://www.corvine.org/twittertype"
@@ -78,7 +78,7 @@ SPEC = Gem::Specification.new do |s|
   s.test_files = FileList["{test}/**/*_spec.rb"].to_a
   s.has_rdoc = true
   s.extra_rdoc_files = ["README"]
-  s.add_dependency("Twitter", ">= 0.8.0")
+  s.add_dependency("twitter", ">= 0.8.0")
 end
 
 desc "Package me as a RubyGem"
