--- a/rakefile
+++ b/rakefile
@@ -70,7 +70,7 @@ SPEC = Gem::Specification.new do |s|
   s.version = "0.1.0"
   s.author = "Andy Marks"
   s.email = "andy@corvine.org"
-  s.homepage = "http://www.corvine.org/twittertype"
+  s.homepage = "http://github.com/andeemarks/Twitter-Type"
   s.platform = Gem::Platform::RUBY
   s.summary = "A utility for analysing Twitter user tweet patterns"
   s.files = FileList["{bin,lib}/**/*"].to_a
@@ -78,7 +78,7 @@ SPEC = Gem::Specification.new do |s|
   s.test_files = FileList["{test}/**/*_spec.rb"].to_a
   s.has_rdoc = true
   s.extra_rdoc_files = ["README"]
-  s.add_dependency("twitter", ">= 0.8.0")
+  s.add_dependency("twitter4r", ">= 0.3.2")
 end
 
 desc "Package me as a RubyGem"
